@@ -5,7 +5,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -23,14 +22,14 @@ public class EndpointConfiguration {
     private final ApplicationProperties applicationProperties;
     private Map<String, Boolean> endpointStatuses = new ConcurrentHashMap<>();
     private Map<String, Set<String>> endpointGroups = new ConcurrentHashMap<>();
-    private final boolean runningEE;
+    private final boolean runningProOrHigher;
 
     @Autowired
     public EndpointConfiguration(
             ApplicationProperties applicationProperties,
-            @Qualifier("runningEE") boolean runningEE) {
+            @Qualifier("runningProOrHigher") boolean runningProOrHigher) {
         this.applicationProperties = applicationProperties;
-        this.runningEE = runningEE;
+        this.runningProOrHigher = runningProOrHigher;
         init();
         processEnvironmentConfigs();
     }
@@ -102,7 +101,7 @@ public class EndpointConfiguration {
                         // is false)
                         .map(Map.Entry::getKey)
                         .sorted()
-                        .collect(Collectors.toList());
+                        .toList();
 
         if (!disabledList.isEmpty()) {
             log.info(
@@ -290,7 +289,7 @@ public class EndpointConfiguration {
                 }
             }
         }
-        if (!runningEE) {
+        if (!runningProOrHigher) {
             disableGroup("enterprise");
         }
 
